# attome-website

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.claude/commands/: coding-guidelines.md
angular/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
angular/src/: index.html  main.ts  styles.css
angular/src/app/: app.component.ts  app.config.ts  app.routes.ts
angular/src/app/components/auth-modal/: auth-modal.component.css  auth-modal.component.html  auth-modal.component.ts
angular/src/app/layout/: shell.component.ts
angular/src/app/pages/: auth-shared.css
angular/src/app/pages/dashboard/: dashboard.component.ts
angular/src/app/pages/entity/: entity-form-page.component.ts  entity-list-page.component.ts
angular/src/app/pages/landing/: landing.component.css  landing.component.html  landing.component.ts
angular/src/app/pages/login/: login.component.ts
angular/src/app/pages/register/: register.component.ts
angular/src/app/services/: auth-modal.service.ts
angular/src/environments/: environment.prod.ts  environment.ts
crates/server/: Cargo.toml
crates/server/migrations/: 0001_core_apikey.sql  001_users.sql  002_roles.sql  003_refresh_tokens.sql  004_entities.sql  005_entity_fields.sql  006_relationships.sql  007_records.sql
crates/server/src/: auth.rs  main.rs
