[workspace]
members  = ["crates/server"]
resolver = "2"

[workspace.package]
version    = "1.0.0"
edition    = "2024"
authors    = ["attome-ai"]
repository = "https://github.com/attome-ai/attome"
license    = "MIT"

# ── attome-xrm (git for production) ──────────────────────────────────────────
[workspace.dependencies]
xrm-server     = { git = "https://github.com/attome-ai/attome-xrm", tag = "v1.0.0" }
xrm-foundation = { git = "https://github.com/attome-ai/attome-xrm", tag = "v1.0.0" }
base-types     = { git = "https://github.com/attome-ai/attome-base", tag = "v1.0.0" }
base-config    = { git = "https://github.com/attome-ai/attome-base", tag = "v1.0.0" }
base-db        = { git = "https://github.com/attome-ai/attome-base", tag = "v1.0.0" }
base-cache     = { git = "https://github.com/attome-ai/attome-base", tag = "v1.0.0" }
base-server    = { git = "https://github.com/attome-ai/attome-base", tag = "v1.0.0" }

tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx        = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# ─────────────────────────────────────────────────────────────────────────────
# LOCAL DEVELOPMENT OVERRIDE
# Uncomment to use local repos instead of git (clone all three repos side by side).
# Re-comment before committing / pushing to CI.
# ─────────────────────────────────────────────────────────────────────────────
# [patch."https://github.com/attome-ai/attome-xrm"]
# xrm-server     = { path = "../attome-xrm/crates/xrm-server" }
# xrm-foundation = { path = "../attome-xrm/crates/xrm-foundation" }
# xrm-entity     = { path = "../attome-xrm/crates/xrm-entity" }
# xrm-field      = { path = "../attome-xrm/crates/xrm-field" }
# xrm-workflow   = { path = "../attome-xrm/crates/xrm-workflow" }
# xrm-form       = { path = "../attome-xrm/crates/xrm-form" }
# xrm-report     = { path = "../attome-xrm/crates/xrm-report" }
# xrm-bot        = { path = "../attome-xrm/crates/xrm-bot" }
# xrm-automation = { path = "../attome-xrm/crates/xrm-automation" }
# xrm-generator  = { path = "../attome-xrm/crates/xrm-generator" }
# xrm-ai         = { path = "../attome-xrm/crates/xrm-ai" }
#
# [patch."https://github.com/attome-ai/attome-base"]
# base-types  = { path = "../attome-base/crates/base-types" }
# base-config = { path = "../attome-base/crates/base-config" }
# base-db     = { path = "../attome-base/crates/base-db" }
# base-cache  = { path = "../attome-base/crates/base-cache" }
# base-auth   = { path = "../attome-base/crates/base-auth" }
# base-server = { path = "../attome-base/crates/base-server" }
