[package]
name        = "server"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true
license.workspace    = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
xrm-server.workspace         = true
xrm-foundation.workspace     = true
xrm-entity.workspace         = true
base-types.workspace         = true
base-config.workspace        = true
base-db.workspace            = true
base-cache.workspace         = true
base-auth.workspace          = true
base-server.workspace        = true
base-storage.workspace       = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
sqlx.workspace               = true
axum.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
uuid.workspace               = true
chrono.workspace             = true
reqwest.workspace            = true
tower-http.workspace         = true
rand.workspace               = true
